binary search tree

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
+
+    <canvas id="bst-visualize" width="800px" height="600px"></div>
     
     <script src="Class/LinkedList.js"> </script>
     <script src="Class/Queue.js"></script>
